--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </div>
         
         <footer>
-            <p>&copy; 2025 OneManArmy | Professional CS 1.6 Plugin Development</p>
+            <p>&copy; OneManArmy™ | Professional CS 1.6 Plugin & Mod Development (2025)</p>
         </footer>
     </div>
     
@@ -426,3 +426,4 @@
     </script>
 </body>
 </html>
+
