--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </div>
         
         <footer>
-            <p>&copy; OneManArmy™ | Professional CS 1.6 Plugin & Mod Development (2025)</p>
+            <p>OneManArmy™ | Professional CS 1.6 Plugin & Mod Development (2025)</p>
         </footer>
     </div>
     
@@ -426,4 +426,5 @@
     </script>
 </body>
 </html>
+
 
